--- a/www/css/main_style.css
+++ b/www/css/main_style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 body{
-    font-family: Arial, sans-serif;
+    font-family: Montserrat, Arial, sans-serif;
 }
 
 *{
