--- a/www/css/login.css
+++ b/www/css/login.css
@@ -1,4 +1,5 @@
 #container{
+    position: fixed;
     background-color: #D8B251;
     width: 100%;
     height: 100vh;
@@ -44,7 +45,7 @@ form input, form label, form button{
     margin-top: 60px;
 }
 
-#username, #password{
+#email, #password{
     height: 40px;
     margin: 10px 0;
     padding-left: 50px;
@@ -56,7 +57,7 @@ form input, form label, form button{
     font-size: 1.5em;
 }
 
-#username{
+#email{
     background-image: url('../img/icons/user_icon.svg');
 
 }
